--- a/Application/Admin/View/Setting/stuInfo.html
+++ b/Application/Admin/View/Setting/stuInfo.html
@@ -50,14 +50,14 @@
 	.contain select{
 		width:70px;
 	}
-	.confirm-btn1{
+	.confirm-btn1,.confirm-btn2{
 		width:50px;
 		height:25px;
 		background:#449d44;
 		border-color:#398439;
 		color:#fff;
 	}
-	.cancel-btn1{
+	.cancel-btn1,.cancel-btn2{
 		width:50px;
 		height:25px;
 		border-color:#eea236;
@@ -72,6 +72,13 @@
 	.add_right{
 		display: inline-block;
 	}
+	.export-btn1{
+		background: #0eace0;
+	    width: auto;
+	    padding: 2px;
+	    height: 30px;
+	    border-radius: 5px;
+	}
 </style>
 <br>
 <h1 class="tt_h1">位置：学生管理>查看学生信息<p style="text-align:right;display:inline-block;width:50%;float:right;"><button class="import-btn" onclick="window.open('/cxg/Public/function/import.php')"><i class="import-btn-img"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;导入学生信息</button><button class="export-btn" onclick="window.open('/cxg/Public/function/export.php');"><i class="export-btn-img"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;导出学生信息</button></p></h1>
@@ -84,7 +91,7 @@
 	</select>&nbsp;&nbsp;
 	<button class="search"><i class="search-btn-img"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;查找</button>
 </p>
-<p style="text-align:right;display:inline-block;width:50%;"><button class="add-btn"><i class="add-btn-img"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;添加学生信息</button></p>
+<p style="text-align:right;display:inline-block;width:50%;"><button class="add-btn"><i class="add-btn-img"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;添加学生信息</button><button class="export-btn1"><i class="export-btn-img"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;导出学生照片</button></p>
 <br>
 <div id="con_div" style="left:30px;">
 	<table id="table" class="new_table" style="overflow-x:auto;">
@@ -157,6 +164,18 @@
 		<button class="cancel-btn1">取消</button>
 	</form>
 </div>
+
+<div id="tips_box" class="tipss" style="position:absolute;left:0;top:0;right:0;z-index:9999;text-align:center;display:none;">
+	<div id='tips' class="tipss" style="width:400px;height:300px;margin-top:150px;background:#fff;display:inline-block;">
+		<p style="height:50px;margin-top:60px;"><input style="width:20px;" type="radio" name='export_way' value="按班级导出">按班级导出</p>
+		<p style="height:50px;margin-top:20px;"><input style="width:20px;" type="radio" name='export_way' value="按宿舍导出">按宿舍导出</p>
+		<p style="margin-top:20px;">
+			<button class="confirm-btn2">确定</button>&nbsp;&nbsp;&nbsp;&nbsp;<button class="cancel-btn2">取消</button>
+		</p>
+	</div>
+</div>
+
+
 
 <script type="text/javascript">
 	window.getList = function(data={})
@@ -693,6 +712,36 @@
 		{
 			tips(res.content,2);
 		}
+	})
+	$(".export-btn1").live("click",function()
+	{
+		$("#shell").show();
+		$(".tipss").show();
+	})
+	$(".confirm-btn2").live("click",function()
+	{
+		var export_way = $("input[name='export_way']:checked").val();
+		if(export_way == '按班级导出')
+		{
+			$("#shell").hide();
+			$(".tipss").hide();
+			window.open("/cxg/Public/function/exportStudentPhoto.php?w=1");
+		}
+		else if(export_way == '按宿舍导出')
+		{
+			$("#shell").hide();
+			$(".tipss").hide();
+			window.open("/cxg/Public/function/exportStudentPhoto.php?w=2");
+		}
+		else
+		{
+			tips("请选择导出方式",2);
+		}
+	})
+	$(".cancel-btn2").live("click",function()
+	{
+		$("#shell").hide();
+		$(".tipss").hide();
 	})
 
 	$(".cancel-btn1").live("click",function()
