--- a/Application/Admin/View/Leave/viewRecord.html
+++ b/Application/Admin/View/Leave/viewRecord.html
@@ -62,9 +62,9 @@
 		开始时间：<input class="sang_Calender" type="text" name="stime" value="{$Think.post.stime}" id="stime" placeholder="请选择"  readonly style="width:130px;">&nbsp;
 		结束时间：<input class="sang_Calender" type="text" name="etime" value="{$Think.post.etime}" id="etime" placeholder="请选择"  readonly style="width:130px;">&nbsp;
 		<input type="submit" id="submit" value="搜索" style="padding:1px;margin-left:10px;padding-top:0;padding-bottom:0;">
-		<button id="receive_all">
+		<!-- <button id="receive_all">
 			全部签收
-		</button>
+		</button> -->
 	</form>
 	
 </div>
