--- a/Application/Home/View/Hostel/index.html
+++ b/Application/Home/View/Hostel/index.html
@@ -5,6 +5,7 @@
 	<title>校园管理系统</title>
 	<script type="text/javascript" src="__PUBLIC__/js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="__PUBLIC__/js/fun.js"></script>
+	<script type="text/javascript" src="__PUBLIC__/js/livequery.js"></script>
 	<link rel="stylesheet" href="__PUBLIC__/css/index.css" type="text/css">
 	<style type="text/css">
 		.hide{
