--- a/Application/Home/View/Hostel/video.html
+++ b/Application/Home/View/Hostel/video.html
@@ -11,88 +11,120 @@
       background:url("__PUBLIC__/images/xingkong.jpg");
       background-repeat:no-repeat;
       background-size:100%;
-    }
-    span{
-      font-size:25px;
-      height:80px;
-      line-height:80px;
-      display:inline-block;
-      width:100%;
-      border:2px solid #06bbc3;
-      margin-top:10px;
-      background:#fff;
-    }
-    span div{
-      display:inline;
-      margin-left:25px;
-    }
-    span img{
-      max-width:80px;
-      max-height:80px;
-      float:left;
 
     }
-    p{
+    .p{
       background: #EEE url(data:image/gif;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAIAAAAmkwkpAAAAHklEQVQImWNkYGBgYGD4//8/A5wF5SBYyAr+//8PAPOCFO0Q2zq7AAAAAElFTkSuQmCC) repeat;
       text-shadow: 5px -5px #fff, 4px -4px white;
       font-weight: bold;
       -webkit-text-fill-color: transparent;
       -webkit-background-clip: text
     }
+    .content{
+      float:left;
+      width:245px;
+      margin-left:3%;
+      border:1px solid #ccc;
+      padding-bottom:21%;
+      margin-bottom:20px;
+      border-radius:5px;
+      margin-top: 5px;
+      height:60px;
+    }
+    .content p{
+      color:white;
+      margin-left: 160px;
+      font-size:20px;
+      margin-top:50px;
+    }
+    .content .pp{
+      margin-left:10px;
+      text-align: center;
+      margin-top:100px;
+
+    }
+    .img{
+      max-width:150px;
+      position: absolute;
+      max-height: 225px;
+    }
   </style>
 </head>
 <body>
-  <p style="width:100%;text-align:center;color:#fff;font-size:50px;line-height:60px;margin-top:20px;">学&nbsp;生&nbsp;进&nbsp;出&nbsp;记&nbsp;录</p>
-  <div style="display:inline-block;margin-top:50px;">
-  <!--[if IE]>  
-     <object type='application/x-vlc-plugin' id='vlc' events='True'  
-         classid='clsid:9BE31822-FDAD-461B-AD51-BE1D1C159921' codebase="http://downloads.videolan.org/pub/videolan/vlc/latest/win32/axvlc.cab" width="720" height="540">  
-            <param name='mrl' value='rtsp://admin:admin@192.168.1.114:554/h264/ch1/main/av_stream' />  
-            <param name='volume' value='50' />  
-            <param name='autoplay' value='true' />  
-            <param name='loop' value='false' />  
-            <param name='fullscreen' value='false' />  
-      </object>  
-  <![endif]-->  
-  <!--[if !IE]>-->
-      <object type='application/x-vlc-plugin' id='vlc' events='False' width="820" height="462" pluginspage="http://www.videolan.org" codebase="http://downloads.videolan.org/pub/videolan/vlc-webplugins/2.0.6/npapi-vlc-2.0.6.tar.xz" style="margin-left:50px;margin-top:75px;">  
-          <param name='mrl' value='rtsp://admin:admin@192.168.1.114:554/h264/ch1/main/av_stream' />  
-          <param name='volume' value='1' />  
-          <param name='autoplay' value='true' />  
-          <param name='loop' value='false' />  
-          <param name='fullscreen' value='false' /> 
-      </object>  
-  <!--<![endif]-->  
-</div>
+  <p class="p" style="width:100%;text-align:center;color:#fff;font-size:50px;line-height:60px;margin-top:20px;">学&nbsp;生&nbsp;进&nbsp;出&nbsp;记&nbsp;录</p>
   
-<div id="show-box" style="border:1px solid black;width:600px;height:560px;float:right;margin-top:50px;margin-right:50px;border:2px solid #eee;border-radius:3px;padding:10px;overflow:hidden;" >
-    <span><img src="http://192.168.1.120/cxg/Public/images/1.jpg"><div>汪汪汪</div><div>3-2班</div><div>2016-10-10 10:10:10</div></span>
-</div>
+  
+<div style="height:0;overflow-y:hidden;position:relative;width:1200px%;padding-bottom:43%;padding-left:10%;padding-right:10%;" id="box">
+    <foreach item="list" name="record_list">
+     <div class="content">
+          <img src="{$list.photo_text}" class="img">
+          <p>{$list.name_text}</p>
+          <p>{$list.class_text}</p>
+          <p class="pp">{$list.alarm_time} <br>{$list.inout}</p>
+      </div>
+    </foreach>
+    <!-- <div class="content">
+          <img src="https://ss0.bdstatic.com/70cFvHSh_Q1YnxGkpoWK1HF6hhy/it/u=3885187888,766355256&fm=27&gp=0.jpg" class="img">
+          <p>张三</p>
+          <p>三年1班</p>
+          <p class="pp">2018-0806 10:26:54 <br>进入</p>
+      </div> -->
+  </div>
 </body>
 </html>
 <script type="text/javascript">
-        ws = new WebSocket('ws://127.0.0.1:80/HappyChat');
-        ws.onopen = function(){
-            
-        };
-
-        ws.onmessage = function(e){
-            var data = $.parseJSON( e.data );
-            var url = "index.php?m=Home&c=Hostel&a=getInfo";
-            var dd = {id:data.msg,typ:'json'};
-            var res = ajax(url,dd);
-            console.info(res);
+        window.unsethostelEntranceRedis = function()
+        {
+            var url = "index.php?m=Home&c=Hostel&a=unsethostelEntranceRedis";
+            var data = {typ:'json'};
+            var res = ajax(url,data);
             if(res.status == 'success')
             {
-              $("#show-box").prepend("<span><img src='"+res.content[0].img+"'><div>"+res.content[0].name+"</div><div>"+res.content[0].class+"</div><div>"+res.content[0].datetime+"</div></span>");
+                getNewHostelInfo();
             }
             else
             {
-              tips(res.content,2);
+                tips(res.content,2);
             }
-        };
-
-        ws.onerror = function(){
-            alert('错误！');
-        };
+        }
+        window.getNewHostelInfo = function()
+        {
+            var url = "index.php?m=Home&c=Hostel&a=getNewHostelInfo";
+            var data = {typ:'json'};
+            $.ajax({
+              url:url,
+              data:data,
+              timeout:40000,
+              type:'post',
+              dataType:'json',
+              async:true,
+              success:function(data)
+              {
+                if(data.status == 'success')
+                {
+                    var lists = data.content;
+                    addInfo(lists);
+                }
+                else if(data.content == 'TimeOut')
+                {
+                    getNewHostelInfo();
+                }
+                else
+                {
+                    window.location.reload();
+                }
+              },
+              error:function(error)
+              {
+                tips(error,2);
+              }
+            })
+        }
+        window.addInfo = function(list)
+        {
+            var str ='<div class="content"><img src="'+list.photo_text+'" class="img"><p>'+list.name_text+'</p><p>'+list.class_text+'</p><p class="pp">'+list.alarm_time+' <br>'+list.inout+'</p></div>';
+            $("#box").prepend(str);
+            getNewHostelInfo();
+        }
+        setTimeout("unsethostelEntranceRedis();",500);
 </script>
