--- a/Application/Home/View/Hostel/video.html
+++ b/Application/Home/View/Hostel/video.html
@@ -109,6 +109,10 @@
                 {
                     getNewHostelInfo();
                 }
+                else if(data.content == 'no_person')
+                {
+                  getNewHostelInfo();
+                }
                 else
                 {
                     window.location.reload();
