--- a/Application/Home/View/Hostel/viewHostel.html
+++ b/Application/Home/View/Hostel/viewHostel.html
@@ -77,7 +77,7 @@
 	</form>
 </div>
 <br>
-	<h1><div style="float:left;color:red;margin-left:20px;">提示：</div><div class='tip_box'><span style="background:#0f0;display:inline-block;width:49px;height:30px;color:#fff;">已回</span><span style="background:#f00;display:inline-block;width:49px;height:30px;color:#fff;">未回</span></div>{$bb}</h1>
+	<h1><div style="float:left;color:red;margin-left:20px;">提示：</div><div class='tip_box'><span style="background:#0f0;display:inline-block;width:49px;height:30px;color:#fff;font-size:21px;">已回</span><span style="background:#f00;display:inline-block;width:49px;height:30px;color:#fff;font-size:21px;">未回</span></div>{$bb}</h1>
 <div id="box" <if condition="$bb eq ''">style="display:none;"</if> >
 	<foreach item="list" key="key" name="hostel_list">
 		<div class="line">
